[gd_scene load_steps=6 format=2]

[ext_resource path="res://Textures/colored_transparent_packed.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Gun.gd" type="Script" id=2]
[ext_resource path="res://Sound/ShootSound.wav" type="AudioStream" id=3]

[sub_resource type="AudioStreamRandomPitch" id=1]
audio_stream = ExtResource( 3 )

[sub_resource type="CircleShape2D" id=2]
radius = 4.87927

[node name="Gun" type="Sprite"]
modulate = Color( 0.564706, 0.564706, 0.564706, 1 )
texture = ExtResource( 1 )
offset = Vector2( 10, 0 )
region_enabled = true
region_rect = Rect2( 592, 144, 16, 16 )
script = ExtResource( 2 )

[node name="SpawnPoint" type="Position2D" parent="."]
position = Vector2( 15, -1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource( 1 )
pitch_scale = 1.25

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 10.134, 0 )
shape = SubResource( 2 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
